# cuda_coda

./: CMakeLists.txt  README.md  hello  ncu.sh
cmake/: cuda.cmake
course1/: CMakeLists.txt  hello_world.cu
course10/ex_demo/: demo.py
course10/extension_cpp/: ops.py
course10/extension_cpp/csrc/: muladd.cpp
course10/extension_cpp/csrc/cuda/: muladd.cu
course2/: CMakeLists.txt  malloc_cpy.cu  reduce_smem.cu  vec_add.cu
course3/: CMakeLists.txt  shuffle.cu  shuffle_down.cu  shuffle_up.cu  softmax_naive.cu
course4/: CMakeLists.txt  reduce.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu
course5_1/: CMakeLists.txt  draw.py  draw_cmp.py  matmul0.cu  matmul1.cu  matmul2.cu  matmul3.cu  matmul4.cu  matmul5.cu
course6/: CMakeLists.txt  histogram.cu  no_race.cu  race.cu
course7/: CMakeLists.txt  naive_transpose.cu  transpose_bench.cu
course8/: CMakeLists.txt  rmsnorm.cu
course9/: CMakeLists.txt  flash_attn.cu  helper.h  self_attn.cu  self_attn.py  self_attn_cmp.py
course9/extension-cpp/ex_demo/: demo.py
course9/extension-cpp/extension_cpp/: ops.py
course9/extension-cpp/extension_cpp/csrc/: flash_attention.cpp
course9/extension-cpp/extension_cpp/csrc/cuda/: flash_attention.cu
